# ML-Ops-Project

./: .dockerignore  .gitignore  Dockerfile.app  README.md  pyproject.toml  requirements-dev.in  requirements.in  test_api.py
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: main.py  predict.py  predicting.py  preprocessing.py  training.py  utils.py
src/modelling/src/web_service/local_objects/: linear_regression_model.pkl  scaler.pkl
src/web_service/: main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: linear_regression_model.pkl  scaler.pkl
