[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "mamounjamai", email = "mamoun.jamai@hec.edu" },
  { name = "MehdiD19", email = "mehdi.digua@hec.edu" },
  { name = "plafarguette2", email = "pierre.lafarguette@hec.edu" },
  { name = "sqerbo01", email = "marco.salerno@hec.edu" },
  { name = "iliassSjm", email = "iliass.sijelmassi@hec.edu" },
  { name = "cedrickirek", email = "cedric.kire@hec.edu" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.11"
dependencies = [
    # Data Science & ML
    "pandas==2.1.1",
    "numpy>=1.26.4",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "matplotlib>=3.7,<3.10",
    # API & Validation (FastAPI v0.103 usa Pydantic v1)
    "fastapi==0.103.2",
    "uvicorn[standard]==0.23.2",
    "pydantic>=1,<2",
    # Utilities
    "loguru==0.7.2",
    "joblib==1.3.2",
    "gdown==5.2.0",
    "griffe<1.0.0",
    "ipykernel==6.25.2", # valutalo in dev
    "mlflow>=3.5.1",
    "prefect>=2.19.8",
]

[tool.setuptools]
packages = []

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff>=0.12.11",
    "pytest>=8.4.2",
    "nbstripout>=0.8.1",
    "pip-tools>=7.5.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["D", "ANN", "E", "W", "F", "N", "Q", "ARG", "PTH"]
ignore = ["D417", "D100", "PD901", "N806", "N815", "N803", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
order-by-type = true
